# NinjaPay_v5

./: .env.example  .gitignore  API_SPEC.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  FEASIBILITY_ANALYSIS.md  NEURAL_INTELLIGENCE_SYSTEM.md  PITCH_DECK.md  PRD.md  PROGRESS.md  README.md  SPRINT_PLAN.md  dump.rdb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-all-services.sh  test-arcium-cluster.sh  test-e2e-flow.py  test-payment-flow.js  test-payment-flow.sh  turbo.json
apps/admin-portal/: middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/admin-portal/src/app/: globals.css  layout.tsx  page.tsx
apps/admin-portal/src/components/: providers.tsx
apps/admin-portal/src/lib/: api.ts  env.ts  hooks.ts  navigation.ts
apps/landing/: package.json  tailwind.config.ts
apps/landing/src/app/: globals.css  layout.tsx  page.tsx
apps/landing/src/components/: Developers.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navigation.tsx  Pricing.tsx
apps/merchant-dashboard/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/merchant-dashboard/src/: middleware.ts
apps/merchant-dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/merchant-dashboard/src/components/: Header.tsx  OnboardingModal.tsx  ProtectedRoute.tsx  Sidebar.tsx  WalletConnect.tsx
apps/merchant-dashboard/src/contexts/: AuthContext.tsx
apps/merchant-dashboard/src/hooks/: useApi.ts
apps/merchant-dashboard/src/lib/: api-client.ts  auth.ts  env.ts  solana.ts  utils.ts
apps/merchant-dashboard/src/providers/: WalletProvider.tsx
docs/archive/: DEMO_QUICK_REFERENCE.md  DEMO_SCRIPT.md  DEPLOYMENT_CONFIG.md  DEVELOPMENT.md  FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_REPORT_FINAL.md  IMPLEMENTATION_SUMMARY.md  MONOREPO_ARCHITECTURE.md  PHASE_1_COMPLETE.md  PITCH_DECK.md  PRODUCTION_READINESS_ASSESSMENT.md  READY_FOR_SUBMISSION.md  RISK_MITIGATION.md  ROADMAP.md  SUBMISSION_SUMMARY.md  mytodo.md  tracks.md
monkeydeals/: README.md
programs/ninja-payroll/: Anchor.toml  Cargo.toml
programs/ninja-payroll/src/: lib.rs
programs/ninjapay-vault-lite/: Cargo.toml
programs/ninjapay-vault-lite/src/: lib.rs
scripts/: complete-db-setup.sh  fix-and-setup-db.sh  quick-db-setup.sh  setup-database.sh
services/api-gateway/: .env.example  package.json  tsconfig.json  vitest.config.ts
services/api-gateway/src/: index.ts
services/api-gateway/src/__tests__/: payment-flow.e2e.test.ts  setup.ts
services/api-gateway/src/middleware/: auth.ts  authenticate.ts  errorHandler.ts  rateLimiter.ts  (+1 more)
services/arcium-service/: .env.example  Anchor.toml  Cargo.toml  Cargo.toml.service
services/arcium-service/artifacts/: circuits_hash.txt
services/arcium-service/encrypted-ixs/: Cargo.toml
services/arcium-service/encrypted-ixs/src/: lib.rs
services/arcium-service/programs/ninjapay-vault/: Cargo.toml  Xargo.toml
services/arcium-service/programs/ninjapay-vault/src/: lib.rs
services/arcium-service/src/: main.rs
services/arcium-service/src/api/: account.rs  computation.rs  health.rs  mod.rs
services/arcium-service/src/mpc/: client.rs  discriminators.rs  encryption.rs  instructions.rs  mod.rs  simulator.rs  types.rs
services/arcium-service/src/utils/: mod.rs  redis.rs  secrets.rs  solana.rs
services/payroll-service/: .env.example  package.json
services/payroll-service/src/: index.ts
tests/e2e/: arcium-service.test.js
tests/integration/: encryption-symmetry.test.ts  jest.config.js  setup.ts
tests/unit/: solana-encryption.test.js
(+95 files in other folders)
