[package]
name = "ninja-payroll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ninja_payroll"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
ephemeral-rollups-sdk = { version = "0.1.0", features = ["anchor"] }

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
