[package]
name = "ninja-payroll"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "ninja_payroll"

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
ephemeral-rollups-sdk-v2 = { version = "0.1.2", features = ["anchor"] }

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true
