[package]
name = "arcium-service"
version = "1.0.0"
edition = "2021"
authors = ["NinjaPay Team"]

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Solana & Anchor
solana-sdk = "1.17"
anchor-lang = "0.29.0"
anchor-client = "0.29.0"

# Arcium (when CLI is installed, uncomment):
# arcium-anchor = "0.3.1"
# arcis-imports = "*"

# Crypto
bs58 = "0.5"
hex = "0.4"

# Logging
env_logger = "0.11"
log = "0.4"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Utilities
lazy_static = "1.4"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
