[package]
name = "arcium-service"
version = "1.0.0"
edition = "2021"
authors = ["NinjaPay Team"]

[[bin]]
name = "arcium-service"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Crypto (bs58 for address encoding)
bs58 = "0.5"
hex = "0.4"
base64 = "0.21"

# Cryptography (development-mode encryption)
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Logging
env_logger = "0.11"
log = "0.4"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Utilities
lazy_static = "1.4"
chrono = "0.4"
dotenv = "0.15.0"

[workspace]
members = [
    "encrypted-ixs",
    "programs/ninjapay-vault",
]

[dev-dependencies]
tokio-test = "0.4"
