[package]
name = "ninjapay-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ninjapay_vault"

[dependencies]
anchor-lang = "0.29.0"
arcium-anchor = "0.3.0"
arcis-imports = "0.3.0"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
